--- a/package.json
+++ b/package.json
@@ -26,11 +26,8 @@
 		"svelte-check": "^2.2.6",
 		"svelte-preprocess": "^4.9.4",
 		"tslib": "^2.3.1",
-		"typescript": "^4.4.3"
-	},
-	"type": "module",
-	"dependencies": {
-		"svelte-ransom-note": "^0.0.3",
+		"typescript": "^4.4.3",
 		"svelte2tsx": "^0.4.13"
-	}
+	},
+	"type": "module"
 }
