--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,9 @@
 		"checkJs": true,
 		"paths": {
 			"$lib": ["src/lib"],
-			"$lib/*": ["src/lib/*"]
+			"$lib/*": ["src/lib/*"],
+			"svelte-ransom-note":["src/lib/index.ts"],
+			"svelte-ransom-note/*":["src/lib/*"]
 		}
 	},
 	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte"]
